@@ -1,3 +1,8 @@
+2005-12-14  Sami Wagiaalla  <swagiaal@redhat.com>
+
+	* StatusWidget.java (TimelineAction): Removed all references to
+	logTextView.
+
 2005-12-13  Andrew Cagney  <cagney@redhat.com>
 
 	* ProcDataModel.java: Update, Proc .observableTaskAdded renamed
